Fix Bug 287180 - Missing Server Side Subscription context menu

FIXED-IN: 4.9
BUG: 287180